done fixing bug of 0-d array for regression

--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -1033,7 +1033,9 @@
     "                results[f'pred_prob_{label_names[i]}']=_preds.numpy()\n",
     "            else:\n",
     "                if head_sizes[i]==1: # regression\n",
-    "                    results[f'pred_{label_names[i]}']=_preds.numpy()\n",
+    "                    _result = _preds.numpy()\n",
+    "                    if _result.ndim==0: _result=_result.reshape((1,))\n",
+    "                    results[f'pred_{label_names[i]}']=_result\n",
     "                else: # classification\n",
     "                    _p,_l = torch.topk(_preds,topk,dim=-1)\n",
     "                    if topk==1:\n",
@@ -1348,7 +1350,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L364){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L368){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController\n",
        "\n",
@@ -1365,7 +1367,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L364){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L368){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController\n",
        "\n",
@@ -1399,13 +1401,13 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L374){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L378){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.fit\n",
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f53c3fb3c70>], batch_size=16, weight_decay=0.01,\n",
+       ">                           0x7f5503fb7c70>], batch_size=16, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
        ">                           hf_report_to='none', compute_metrics=None,\n",
@@ -1437,13 +1439,13 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L374){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L378){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.fit\n",
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f53c3fb3c70>], batch_size=16, weight_decay=0.01,\n",
+       ">                           0x7f5503fb7c70>], batch_size=16, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
        ">                           hf_report_to='none', compute_metrics=None,\n",
@@ -1492,7 +1494,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L432){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L436){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1504,7 +1506,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L432){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L436){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1533,7 +1535,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L454){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L458){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1545,7 +1547,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L454){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L458){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1574,7 +1576,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L477){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L481){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
@@ -1606,7 +1608,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L477){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L481){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
