--- a/nbs/20_model_main_roberta_singlehead.ipynb
+++ b/nbs/20_model_main_roberta_singlehead.ipynb
@@ -204,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a798abd9dbb41518344a4d7fef049d1",
+       "model_id": "dbf785d88e124dd783e1ba8b0d51a813",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2592b25c003940408ee2c94d5ac8e272",
+       "model_id": "6f6e1b4ec6634ee28598589621f95789",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +232,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7aa4c6d4e7c4fd793cf24f80a0324d2",
+       "model_id": "493fa1827e1e45bf9fd7716b36a96094",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "385fce0bef364b3db506a3d4c8ed034f",
+       "model_id": "071db6b96e7e4a9f889c9ab36eb3b938",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a75a6c9456c4f78ba67ab3b04b7365a",
+       "model_id": "b3eae5a1bd384a16a81e3118ba9212ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,7 +452,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='849' max='849' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [849/849 02:10, Epoch 3/3]\n",
+       "      [849/849 03:47, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -468,23 +468,23 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.292264</td>\n",
-       "      <td>0.747809</td>\n",
-       "      <td>0.916262</td>\n",
+       "      <td>0.305831</td>\n",
+       "      <td>0.746490</td>\n",
+       "      <td>0.912947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.440700</td>\n",
-       "      <td>0.291263</td>\n",
-       "      <td>0.744805</td>\n",
-       "      <td>0.917145</td>\n",
+       "      <td>0.432400</td>\n",
+       "      <td>0.271100</td>\n",
+       "      <td>0.752900</td>\n",
+       "      <td>0.921343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.440700</td>\n",
-       "      <td>0.276381</td>\n",
-       "      <td>0.748820</td>\n",
-       "      <td>0.920681</td>\n",
+       "      <td>0.432400</td>\n",
+       "      <td>0.270787</td>\n",
+       "      <td>0.752479</td>\n",
+       "      <td>0.921343</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -567,7 +567,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at sample_weights/my_model were not used when initializing RobertaHiddenStateConcatForSequenceClassification: ['body_model.pooler.dense.bias', 'body_model.pooler.dense.weight']\n",
+      "Some weights of the model checkpoint at sample_weights/my_model were not used when initializing RobertaHiddenStateConcatForSequenceClassification: ['body_model.pooler.dense.weight', 'body_model.pooler.dense.bias']\n",
       "- This IS expected if you are initializing RobertaHiddenStateConcatForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaHiddenStateConcatForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -605,7 +605,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c540c6e1891456aa746f2fa760a1da9",
+       "model_id": "8ba70310761742f383daf1584ba45059",
        "version_major": 2,
        "version_minor": 0
       },
@@ -619,7 +619,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b051acc89c784f69aaf6929bbe2a9101",
+       "model_id": "22b7057680ab4e5a8768dcdf272e18b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -683,7 +683,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 479, 215, 10, 1531...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Jackets</td>\n",
-       "      <td>0.825374</td>\n",
+       "      <td>0.813677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -695,7 +695,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 2007, 8, 14878, 47...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.996339</td>\n",
+       "      <td>0.997383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -707,7 +707,7 @@
        "      <td>[0, 15841, 479, 11299, 8, 1256, 479, 42, 299, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.996327</td>\n",
+       "      <td>0.997714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -719,7 +719,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 1035, 1589, 1136, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Dresses</td>\n",
-       "      <td>0.985229</td>\n",
+       "      <td>0.987384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -731,7 +731,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 1969, 4682, 9215, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Dresses</td>\n",
-       "      <td>0.985326</td>\n",
+       "      <td>0.989576</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -767,11 +767,11 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...              Dresses   \n",
        "\n",
        "   pred_prob_Department Name  \n",
-       "0                   0.825374  \n",
-       "1                   0.996339  \n",
-       "2                   0.996327  \n",
-       "3                   0.985229  \n",
-       "4                   0.985326  "
+       "0                   0.813677  \n",
+       "1                   0.997383  \n",
+       "2                   0.997714  \n",
+       "3                   0.987384  \n",
+       "4                   0.989576  "
       ]
      },
      "execution_count": null,
@@ -799,7 +799,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7488199842877242"
+       "0.7524785969971597"
       ]
      },
      "execution_count": null,
@@ -858,7 +858,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d690fa5213c14b48ba4a8700e5265ab8",
+       "model_id": "3acf4a3beb704df49baa2b5b5fe2b608",
        "version_major": 2,
        "version_minor": 0
       },
@@ -872,7 +872,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d19eb7a865664f13aae17e487497e312",
+       "model_id": "d0e2bbc29ba449e6b447fc6badf817a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -886,7 +886,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40476277be894f949085fd8d26ebc323",
+       "model_id": "0c78c4baca30434baac613a09cc69fca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -900,7 +900,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28d463565102498f8d86749b4422a74f",
+       "model_id": "133e2a40151740fb8f18048f53c9956c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -914,7 +914,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edcaf386f3b7408792d5fbc8536260a6",
+       "model_id": "11f25dd8992848e68532d91095ac2940",
        "version_major": 2,
        "version_minor": 0
       },
@@ -935,7 +935,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "064a97bfa9944871bfba7bfbb37e1450",
+       "model_id": "a1e7d7e818924bd7bacf19add592cd4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -949,7 +949,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45792abc81ed446a88644968db0173e0",
+       "model_id": "592f4b1267284059a06fcb6f2fcc36a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1021,7 +1021,7 @@
        "      <td>[0, 15841, 479, 1969, 13, 173, 8, 310, 479, 42...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.996435</td>\n",
+       "      <td>0.996611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1031,7 +1031,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 479, 939, 218, 75,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Bottoms</td>\n",
-       "      <td>0.988353</td>\n",
+       "      <td>0.987901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1041,7 +1041,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 372, 9304, 479, 5,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Bottoms</td>\n",
-       "      <td>0.989876</td>\n",
+       "      <td>0.986915</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1051,7 +1051,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 10262, 3137, 24382...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.995456</td>\n",
+       "      <td>0.995989</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1061,7 +1061,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 765, 8, 650, 479, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.996081</td>\n",
+       "      <td>0.996424</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1097,11 +1097,11 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...                 Tops   \n",
        "\n",
        "   pred_prob_Department Name  \n",
-       "0                   0.996435  \n",
-       "1                   0.988353  \n",
-       "2                   0.989876  \n",
-       "3                   0.995456  \n",
-       "4                   0.996081  "
+       "0                   0.996611  \n",
+       "1                   0.987901  \n",
+       "2                   0.986915  \n",
+       "3                   0.995989  \n",
+       "4                   0.996424  "
       ]
      },
      "execution_count": null,
@@ -1128,7 +1128,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7568713488692774"
+       "0.7544156386786569"
       ]
      },
      "execution_count": null,
@@ -1162,7 +1162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8168900e4754562a5cf60f057450f27",
+       "model_id": "3e3e0baf056646538f4794e17d4bb050",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1176,7 +1176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d820edfa36454a4787efcd80c16b04e3",
+       "model_id": "4910aae8434845abb4099a3d285c53c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1190,7 +1190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4be3e1dbcdad4c84a91f441bc93e28e8",
+       "model_id": "be472ab9684a4ebaa87903b0b1886b49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1204,7 +1204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "133da2548fe945a6a528a71f2727742c",
+       "model_id": "5bf606d6f1d24d15bb63bb93a0b77b8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1218,7 +1218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6b68145f19c4b28aa6988fd08e82c03",
+       "model_id": "ddcdf9a634cb4a1f9d50e85077ec91b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1239,7 +1239,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8ebbf1d3e6c46569712ae5e2f83a57a",
+       "model_id": "7682c6302a484a8da168872f722490ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1253,7 +1253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09cfb6a39a6148848d49a8122c532ca3",
+       "model_id": "8853459219954fb391ef294cdc24b620",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1317,7 +1317,7 @@
        "      <td>[0, 15841, 479, 1969, 13, 173, 8, 310, 479, 42...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.9964347, 0.0018387601, 0.0009831662]</td>\n",
+       "      <td>[0.99661106, 0.0015299238, 0.0010903623]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1327,7 +1327,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 479, 939, 218, 75,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Bottoms, Intimate, Trend]</td>\n",
-       "      <td>[0.98835343, 0.008370473, 0.0024500983]</td>\n",
+       "      <td>[0.9879012, 0.007830881, 0.003813601]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1337,7 +1337,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 372, 9304, 479, 5,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Bottoms, Intimate, Trend]</td>\n",
-       "      <td>[0.98987633, 0.006731469, 0.002665208]</td>\n",
+       "      <td>[0.98691535, 0.008944315, 0.0036852278]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1347,7 +1347,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 10262, 3137, 24382...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.99545634, 0.0019228057, 0.0009931885]</td>\n",
+       "      <td>[0.9959894, 0.0013762865, 0.0013451306]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1357,7 +1357,7 @@
        "      <td>[0, 15841, 4716, 1459, 479, 765, 8, 650, 479, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.9960808, 0.0018843057, 0.000964977]</td>\n",
+       "      <td>[0.9964238, 0.0012665641, 0.0012325565]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1393,11 +1393,11 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...   \n",
        "\n",
        "         pred_Department Name                 pred_prob_Department Name  \n",
-       "0     [Tops, Intimate, Trend]   [0.9964347, 0.0018387601, 0.0009831662]  \n",
-       "1  [Bottoms, Intimate, Trend]   [0.98835343, 0.008370473, 0.0024500983]  \n",
-       "2  [Bottoms, Intimate, Trend]    [0.98987633, 0.006731469, 0.002665208]  \n",
-       "3     [Tops, Intimate, Trend]  [0.99545634, 0.0019228057, 0.0009931885]  \n",
-       "4     [Tops, Intimate, Trend]    [0.9960808, 0.0018843057, 0.000964977]  "
+       "0     [Tops, Intimate, Trend]  [0.99661106, 0.0015299238, 0.0010903623]  \n",
+       "1  [Bottoms, Intimate, Trend]     [0.9879012, 0.007830881, 0.003813601]  \n",
+       "2  [Bottoms, Intimate, Trend]   [0.98691535, 0.008944315, 0.0036852278]  \n",
+       "3     [Tops, Intimate, Trend]   [0.9959894, 0.0013762865, 0.0013451306]  \n",
+       "4     [Tops, Intimate, Trend]   [0.9964238, 0.0012665641, 0.0012325565]  "
       ]
      },
      "execution_count": null,
@@ -1438,7 +1438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eecd09c7dd1a40ef9592bcb48b4381e9",
+       "model_id": "e91ee51825624407aeb379d7b5806b06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1452,7 +1452,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07cb385e232b47c2a937212854482aa4",
+       "model_id": "95a7da8fe79d4d478660dde237576eb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1466,7 +1466,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09a8894122a548a993d92a56082f8e82",
+       "model_id": "31e5489d8c4d4b5e9d0200f4aba6aa7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1480,7 +1480,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b69b50f31a594d43a3af7de2cd08286f",
+       "model_id": "1d5b4edd2baa41518caa7a0dcc187c92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1501,7 +1501,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be5ad12fead749ac9936d5f18cf14885",
+       "model_id": "9019a9da145040b983364dd5a59d3f3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1515,7 +1515,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6aea775c93324d35a7519ebda06e7a2d",
+       "model_id": "4244c532306b4b948e72be538f3b64fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1574,8 +1574,8 @@
        "      <td>general</td>\n",
        "      <td>[0, 15841, 479, 372, 6399, 479, 42, 6399, 16, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]</td>\n",
-       "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.99637127, 0.0018495054, 0.0010611379]</td>\n",
+       "      <td>[Tops, Trend, Intimate]</td>\n",
+       "      <td>[0.9976534, 0.00097541075, 0.0008267608]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1589,10 +1589,10 @@
        "0       general  [0, 15841, 479, 372, 6399, 479, 42, 6399, 16, ...  \\\n",
        "\n",
        "                                     attention_mask     pred_Department Name   \n",
-       "0  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]  [Tops, Intimate, Trend]  \\\n",
+       "0  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]  [Tops, Trend, Intimate]  \\\n",
        "\n",
        "                  pred_prob_Department Name  \n",
-       "0  [0.99637127, 0.0018495054, 0.0010611379]  "
+       "0  [0.9976534, 0.00097541075, 0.0008267608]  "
       ]
      },
      "execution_count": null,
